[package]
name = "event-pulse"
version = "0.1.6-alpha.6"
authors = ["Alejandro <mr.gaviria@gmail.com>"]
edition = "2021"
description = "Rust backend for an opinionated event notification system"
license = "Apache-2.0"
repository = "https://github.com/agaviria/event-pulse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
log = "0.4.21"
tracing = "0.1.40"
structsy = { git = "https://gitlab.com/agaviria1/structsy.git", features = [
    "chrono",
    "derive",
] }
chrono = "0.4.35"
regex = "1.10.3"
once_cell = "1.19.0"
thiserror = "1.0.58"
rust_decimal = "1.34.3"
